--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <header>
                         <div class="header-content">
                                     <div class="logo">
-                                                <h1>NICA<b>RAGUA</b></h1>
+                                                <h1>BAA<b>DOO</b></h1>
                                     </div>                        
                                     
                                     <div class="menu">
@@ -37,7 +37,7 @@
             <!--Portada-->
             <div class="container-cover">
                         <div class="conteiner-info-cover">
-                                    <h1>¡Tierra de Lagos y volcanes!</h1>
+                                    <h1>¡Con Dios Todo es posible!</h1>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi voluptatem sunt, laboriosam maiores tempore perferendis molestiae consequatur. Sed doloribus nisi laudantium dolore iste quis suscipit qui hic, praesentium neque autem.</p>
                         </div>
 
