--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>PAGINA TIPO BLOG</title>
+
+            <script src="https://kit.fontawesome.com/02a817985d.js" crossorigin="anonymous"></script>
+
             <link rel="stylesheet" href="CSS/estilos.css">          
 </head>
 <body>
@@ -41,6 +44,71 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi voluptatem sunt, laboriosam maiores tempore perferendis molestiae consequatur. Sed doloribus nisi laudantium dolore iste quis suscipit qui hic, praesentium neque autem.</p>
                         </div>
 
+            </div>
+
+            <!--Contenido-->
+            <div class="container-content">
+              <article>
+                <h1>Titulo del Articulo</h1>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis velit expedita eaque quis quo ut! Quod qui modi quidem exercitationem a ducimus corrupti numquam, reprehenderit ipsa, laudantium eum, reiciendis sed blanditiis pariatur. Aliquam, facere iusto. Alias quae, qui sit aliquam error et, natus tempora veniam perferendis perspiciatis vel, dolores accusantium!</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam optio error repellat perferendis nesciunt praesentium. Unde corporis nihil iure, voluptas quo rerum. Tenetur exercitationem, sed debitis doloremque blanditiis voluptatibus temporibus assumenda natus delectus nesciunt minima labore beatae nihil? Eaque dolor maxime asperiores libero, fuga sit sunt mollitia consequuntur expedita iure?</p>
+
+                <h1>Subtitulo del articulo</h1>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia rerum quam aut iusto optio nisi, laboriosam aperiam error cumque magni. Quod nobis labore voluptates assumenda similique neque debitis adipisci illum!</p>
+
+                <img src="img/oficina.jpg" alt="">
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat optio pariatur quas. Reprehenderit, neque molestias. Perferendis, animi possimus officia repellendus laboriosam est. Deserunt, eveniet. Error obcaecati laudantium cupiditate cumque corporis, dolore maiores qui! Quae laboriosam a amet, ullam repellendus necessitatibus.</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae perferendis officiis eveniet saepe quod ab eos amet est quasi optio? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed fugiat quia excepturi corrupti, quibusdam eaque quisquam perferendis ullam a consectetur velit autem libero mollitia expedita deserunt nulla sint aperiam sunt, neque iusto id. Nisi esse suscipit reiciendis aliquam? Nemo, possimus?</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum qui ratione aliquid vero, tempore nostrum totam culpa id, accusantium tenetur, voluptates molestiae libero consequatur a impedit necessitatibus cum quam temporibus nemo recusandae architecto inventore. Sapiente tenetur nihil id sunt iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati error accusamus quam, quod in tenetur, minima, modi sapiente earum reprehenderit aliquid delectus atque nulla commodi fugiat. Dolore magnam ipsum quam ullam voluptate, illum quasi nisi repellendus aspernatur magni ratione minima nihil temporibus quidem optio atque asperiores odit quo. Consequuntur, odit.</p>
+
+              </article>
+
+            
+              <!--Articulos relacionados-->
+              <div class="container-aside">
+                <aside>
+                  <img src="img/aside1.jpg" alt="">
+                  <h2>Titulo del articulo</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut esse beatae doloribus temporibus voluptatem veniam quis eveniet pariatur itaque mollitia!</p>
+                  <a href="#"><button>Leer más</button></a>
+                </aside>
+
+                <aside>
+                  <img src="img/aside2.jpg" alt="">
+                  <h2>Titulo del articulo</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut esse beatae doloribus temporibus voluptatem veniam quis eveniet pariatur itaque mollitia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, provident.</p>
+                </aside>
+
+                <aside>
+                  <img src="img/aside3.jpg" alt="">
+                  <h2>Titulo del articulo</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut esse beatae doloribus temporibus voluptatem veniam quis eveniet pariatur itaque mollitia!</p>
+                  <a href="#"><button>Leer más</button></a>
+                </aside>
+
+              </div>
+            </div>
+
+            <!--Footer-->
+            <div class="container-footer">
+              <footer>
+                <div class="logo-footer">
+                   <img src="" alt="">
+                </div>
+                <div class="redes-footer">
+                   <a href="#"><i class="fab fa-facebook-f icon-redes-footer"></i></a>
+                   <a href="#"><i class="fab fa-instagram icon-redes-footer"></i></a>
+                   <a href="#"><i class="fab fa-youtube icon-redes-footer"></i></a>
+                </div>
+                  <hr>
+                  <h4> © 2020 Empresa - Todos los derechos Reservados</h4>
+              </footer>
             </div>
 
             
