--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                                     <div class="menu" id="show-menu">
                                       <nav>
                                                   <ul>
-                                                              <li><a href="#">Inicio</a></li>
-                                                              <li><a href="#">Tutoriales</a></li>
-                                                              <li class="menu-selected"><a href="#" class="text-menu-selected">Blog</a></li>
-                                                              <li><a href="#">Contacto</a></li>
+                                                              <li><a href="inicio.html">Inicio</a></li>
+                                                              <li><a href="tutoriales.html">Tutoriales</a></li>
+                                                              <li class="menu-selected"><a href="index.html" class="text-menu-selected">Blog</a></li>
+                                                              <li><a href="Contacto.html">Contacto</a></li>
                                                   </ul>
                                       </nav>
 
