--- a/Contacto.html
+++ b/Contacto.html
@@ -30,7 +30,7 @@
             <header>
                         <div class="header-content">
                                     <div class="logo">
-                                                <h1>BAA<b>DOO</b></h1>
+                                                <h1>PANAMA<b> TECNOLOGICO</b></h1>
                                     </div>                        
                                     
                                     <div class="menu" id="show-menu">
