--- a/Contacto.html
+++ b/Contacto.html
@@ -30,7 +30,7 @@
             <header>
                         <div class="header-content">
                                     <div class="logo">
-                                                <h1>PANAMA<b> TECNOLOGICO</b></h1>
+                                                <h1>PANAMA<b> TECNOLÓGICO</b></h1>
                                     </div>                        
                                     
                                     <div class="menu" id="show-menu">
@@ -88,9 +88,9 @@
                 <div class="contact-info">
                   <h4>Mas Información</h4>
                   <ul>
-                    <li><i class="fas fa-map-marker-alt"></i>Panamá</li>
-                    <li><i class="fas fa-phone"></i>Teléfono</li>
-                    <li><i class="fas fa-inbox"></i>contact@webside.com</li>
+                    <li><i class="fas fa-map-marker-alt"></i> Panamá</li>
+                    <li><i class="fas fa-phone"></i> Teléfono</li>
+                    <li><i class="fas fa-inbox"></i> contact@webside.com</li>
                   </ul>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae accusamus magni ipsum sunt amet ea consectetur expedita veniam, repellat placeat!</p>
                   <p>Company.com</p>
