--- a/tutoriales.html
+++ b/tutoriales.html
@@ -22,7 +22,7 @@
             <header>
                         <div class="header-content">
                                     <div class="logo">
-                                                <h1>PANAMA<b> TECNOLOGICO</b></h1>
+                                                <h1>PANAMA<b> TECNOLÓGICO</b></h1>
                                     </div>                        
                                     
                                     <div class="menu" id="show-menu">
